--- a/mainapp/templates/mainapp/contacts.html
+++ b/mainapp/templates/mainapp/contacts.html
@@ -1,117 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'mainapp/base.html' %}
+{% load static %}
 
-<head>
-    <meta charset="UTF-8">
-    <title>Interior&nbsp;&mdash; contacts</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link rel="stylesheet" href="/static/css/style.css">
-</head>
-
-<body>
-
-    <div class="wrapper">
-        <section class="top">
-            <section class="container">
-                <main class="main">
-                    <section class="contacts-top padding-site">
-                        <header class="header">
-                            <a class="logo" href="/"><img src="/static/img/logo.svg" alt="logo"></a>
-                            <ul class="menu">
-                                <li><a href="/" class="menu-link">HOME</a></li>
-                                <li><a href="/products/" class="menu-link">PRODUCTS</a></li>
-                                <li><a href="#" class="menu-link">HISTORY</a></li>
-                                <li><a href="/product-details/" class="menu-link">SHOWROOM</a></li>
-                                <li><a href="/contacts/" class="menu-link-active menu-link">CONTACT</a></li>
-                                <li><a href="#" class="menu-link"><img src="/static/img/search.svg" alt="search"></a></li>
-                            </ul>
-                        </header>
-                        <h2 class="contacts-top-title">Contact Us</h2>
-                    </section>
-                    <section class="contacts-box padding-site">
-                        <div class="contact">
-                            <i class="fas fa-map-marker-alt"></i>
-                            <h3 class="contacts-h3">California</h3>
-                            <p class="contacts-p-1">Phone:</p>
-                            <p class="contacts-p-2">1900&nbsp;&mdash; 1234 &minus;5678</p>
-                            <p class="contacts-p-1">Email:</p>
-                            <p class="contacts-p-2">info@interior.com</p>
-                            <p class="contacts-p-1">Address:</p>
-                            <p class="contacts-p-3">12&nbsp;W 1st St, 90001 Los Angeles, California</p>
-                        </div>
-                        <div class="contact">
-                            <i class="fas fa-map-marker-alt"></i>
-                            <h3 class="contacts-h3">California</h3>
-                            <p class="contacts-p-1">Phone:</p>
-                            <p class="contacts-p-2">1900&nbsp;&mdash; 1234 &minus;5678</p>
-                            <p class="contacts-p-1">Email:</p>
-                            <p class="contacts-p-2">info@interior.com</p>
-                            <p class="contacts-p-1">Address:</p>
-                            <p class="contacts-p-3">12&nbsp;W 1st St, 90001 Los Angeles, California</p>
-                        </div>
-                        <div class="contact">
-                            <i class="fas fa-map-marker-alt"></i>
-                            <h3 class="contacts-h3">California</h3>
-                            <p class="contacts-p-1">Phone:</p>
-                            <p class="contacts-p-2">1900&nbsp;&mdash; 1234 &minus;5678</p>
-                            <p class="contacts-p-1">Email:</p>
-                            <p class="contacts-p-2">info@interior.com</p>
-                            <p class="contacts-p-1">Address:</p>
-                            <p class="contacts-p-3">12&nbsp;W 1st St, 90001 Los Angeles, California</p>
-                        </div>
-                    </section>
-                </main>
-            </section>
-        </section>
-        <footer class="footer">
-            <section class="container">
-                <footer class="footer-top-bottom padding-site">
-                    <section class="footer-top">
-                        <article class="footer-top-contact-us">
-                            <h3 class="footer-top-contact-us-name">Contact Us</h3>
-                            <p class="footer-top-contact-us-links">132A Bridge Road Richmond VIC&nbsp;Australia.</p>
-                            <p class="footer-top-contact-us-links">Talk to&nbsp;us on&nbsp;1300&nbsp;132 info@interior.com</p>
-                        </article>
-                        <article class="footer-top-useful">
-                            <h3 class="footer-top-useful-name">Useful Information</h3>
-                            <div class="footer-top-useful-links">
-                                <div class="footer-top-useful-links-1">
-                                    <a class="footer-top-useful-link" href="#">Sales terms</a>
-                                    <a class="footer-top-useful-link" href="#">Customer care</a>
-                                    <a class="footer-top-useful-link" href="#">Delivery</a>
-                                </div>
-                                <div class="footer-top-useful-links-2">
-                                    <a class="footer-top-useful-link" href="#">Architect accounts</a>
-                                    <a class="footer-top-useful-link" href="#">Careers</a>
-                                    <a class="footer-top-useful-link" href="#">Exchanges &amp;&nbsp;returns</a>
-                                </div>
-                            </div>
-                        </article>
-                        <article class="footer-top-subscribe">
-                            <h3 class="footer-top-subscribe-name">Let&rsquo;s Stay in&nbsp;Touch!</h3>
-                            <p class="footer-top-subscribe-details">Suscribe to&nbsp;know about our latest news, products and special offers just for suscribers.</p>
-                            <div class="footer-top-subscribe-input-block">
-                                <input class="footer-top-subscribe-input" type="email" placeholder="your email address">
-                                <button class="footer-top-subscribe-input-button" type="submit"><img src="/static/img/send.png" alt="send"></button>
-                            </div>
-                        </article>
-                    </section>
-                    <section class="footer-bottom">
-                        <p class="footer-bottom-copyright">&copy;Copyright&nbsp;&mdash; INTERIOR 2016. All Rights Reserved.</p>
-                        <article class="footer-bottom-socials">
-                            <a class="footer-bottom-socials-link" href="#"><img src="/static/img/facebook.png" alt="facebook"></a>
-                            <a class="footer-bottom-socials-link" href="#"><img src="/static/img/twitter.png" alt="twitter"></a>
-                            <a class="footer-bottom-socials-link" href="#"><img src="/static/img/google+.png" alt="google+"></a>
-                            <a class="footer-bottom-socials-link" href="#"><img src="/static/img/pinterest.png" alt="pinterest"></a>
-                        </article>
-                        <p class="footer-bottom-terms">Terms &amp;&nbsp;Conditions&nbsp;/ Privacy policy &amp;&nbsp;Cookies</p>
-                    </section>
-                </footer>
-            </section>
-        </footer>
-    </div>
-
-</body>
-
-</html>
+{% block container %}
+<main class="main">
+    <section class="contacts-top padding-site">
+        <header class="header">
+            {% include 'mainapp/includes/inc_header.html' %}
+        </header>
+        <h2 class="contacts-top-title">Contact Us</h2>
+    </section>
+    <section class="contacts-box padding-site">
+        <div class="contact">
+            <i class="fas fa-map-marker-alt"></i>
+            <h3 class="contacts-h3">California</h3>
+            <p class="contacts-p-1">Phone:</p>
+            <p class="contacts-p-2">1900&nbsp;&mdash; 1234 &minus;5678</p>
+            <p class="contacts-p-1">Email:</p>
+            <p class="contacts-p-2">info@interior.com</p>
+            <p class="contacts-p-1">Address:</p>
+            <p class="contacts-p-3">12&nbsp;W 1st St, 90001 Los Angeles, California</p>
+        </div>
+        <div class="contact">
+            <i class="fas fa-map-marker-alt"></i>
+            <h3 class="contacts-h3">California</h3>
+            <p class="contacts-p-1">Phone:</p>
+            <p class="contacts-p-2">1900&nbsp;&mdash; 1234 &minus;5678</p>
+            <p class="contacts-p-1">Email:</p>
+            <p class="contacts-p-2">info@interior.com</p>
+            <p class="contacts-p-1">Address:</p>
+            <p class="contacts-p-3">12&nbsp;W 1st St, 90001 Los Angeles, California</p>
+        </div>
+        <div class="contact">
+            <i class="fas fa-map-marker-alt"></i>
+            <h3 class="contacts-h3">California</h3>
+            <p class="contacts-p-1">Phone:</p>
+            <p class="contacts-p-2">1900&nbsp;&mdash; 1234 &minus;5678</p>
+            <p class="contacts-p-1">Email:</p>
+            <p class="contacts-p-2">info@interior.com</p>
+            <p class="contacts-p-1">Address:</p>
+            <p class="contacts-p-3">12&nbsp;W 1st St, 90001 Los Angeles, California</p>
+        </div>
+    </section>
+</main>
+{% endblock %}
