--- a/mainapp/templates/mainapp/product-details.html
+++ b/mainapp/templates/mainapp/product-details.html
@@ -1,158 +1,84 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'mainapp/base.html' %}
+{% load static %}
 
-<head>
-    <meta charset="UTF-8">
-    <title>Interior&nbsp;&mdash; product details</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="/static/css/style.css">
-</head>
-
-<body>
-
-    <div class="wrapper">
-        <section class="top">
-            <section class="container">
-                <header class="header padding-site">
-                    <a class="logo" href="/"><img src="/static/img/logo.svg" alt="logo"></a>
-                    <ul class="menu">
-                        <li><a href="/" class="menu-link">HOME</a></li>
-                        <li><a href="/products/" class="menu-link">PRODUCTS</a></li>
-                        <li><a href="#" class="menu-link">HISTORY</a></li>
-                        <li><a href="/product-details/" class="menu-link-active menu-link">SHOWROOM</a></li>
-                        <li><a href="/contacts/" class="menu-link">CONTACT</a></li>
-                        <li><a href="#" class="menu-link"><img src="/static/img/search.svg" alt="search"></a></li>
-                    </ul>
-                </header>
-                <main class="main">
-                    <ul class="product-page-nav">
-                        <li class="product-page-nav-list"><a href="#" class="product-page-nav-link-active">All</a></li>
-                        <li class="product-page-nav-list"><a href="#" class="product-page-nav-link">HOME</a></li>
-                        <li class="product-page-nav-list"><a href="#" class="product-page-nav-link">OFFICE</a></li>
-                        <li class="product-page-nav-list"><a href="#" class="product-page-nav-link">FURNITURE</a></li>
-                        <li class="product-page-nav-list"><a href="#" class="product-page-nav-link">MODERN</a></li>
-                        <li class="product-page-nav-list"><a href="#" class="product-page-nav-link">CLASSIC</a></li>
-                    </ul>
-                    <section class="product-page padding-site">
-                        <article class="product-slider">
-                            <a href="img/slider1.jpg" target="_blank">
-                                <div class="product-img" style="background-image: url(/static/img/slider1.jpg)"></div>
-                            </a>
-                            <div class="product-mini-img-box">
-                                <a href="img/controll.jpg" target="_blank">
-                                    <div class="product-mini-img" style="background-image: url(/static/img/controll.jpg)"></div>
-                                </a>
-                                <a href="img/controll11.jpg" target="_blank">
-                                    <div class="product-mini-img" style="background-image: url(/static/img/controll11.jpg)"></div>
-                                </a>
-                                <a href="img/controll2.jpg" target="_blank">
-                                    <div class="product-mini-img" style="background-image: url(/static/img/controll2.jpg)"></div>
-                                </a>
-                            </div>
-                        </article>
-                        <article class="product-description">
-                            <h2 class="product-name">Fishnet Chair</h2>
-                            <h3 class="product-second-name">Hot Deal</h3>
-                            <div class="product-price">
-                                <p class="price-currency">$ </p>
-                                <p class="price-num">36.7</p>
-                                <p class="price-value">/sq</p>
-                            </div>
-                            <a href="#" class="product-button">order&nbsp;us <img class="product-button-arrow" src="/static/img/arrow-product.svg" alt="arrow"></a>
-                            <div class="product-details">
-                                <p class="paragraph">The majesty of&nbsp;Mountains&nbsp;&mdash; Ugmonk style.</p>
-                                <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do&nbsp;eiusmod tempor incididunt ut&nbsp;labore</p>
-                                <p class="paragraph"> et&nbsp;dolore magna aliqua. Ut&nbsp;enim ad&nbsp;minim veniam, quis nostrud exercitation ullamco laboris nisi ut&nbsp;aliquip ex&nbsp;ea&nbsp;commodo consequat.</p>
-                                <p class="paragraph">Duis aute irure dolor in&nbsp;reprehenderit in&nbsp;voluptate velit esse cillum dolore eu&nbsp;fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</p>
-                                <!--
-                    <p class="paragraph"> sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque </p>
-                    <p class="paragraph">laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae </p>
-                    <p class="paragraph">vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam </p>
-                    <p class="paragraph">est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+{% block container %}
+<header class="header padding-site">
+    {% include 'mainapp/includes/inc_header.html' %}
+</header>
+<main class="main">
+    <ul class="product-page-nav">
+        {% for link in links_menu %}
+        <li class="product-page-nav-list"><a href="#" class="product-page-nav-link">{{ link.name }}</a></li>
+        {% endfor %}
+    </ul>
+    <section class="product-page padding-site">
+        <article class="product-slider">
+            <a href="{% static 'img/slider1.jpg' %}" target="_blank">
+                <div class="product-img" style="background-image: url({% static 'img/slider1.jpg' %})"></div>
+            </a>
+            <div class="product-mini-img-box">
+                <a href="{% static 'img/controll.jpg' %}" target="_blank">
+                    <div class="product-mini-img" style="background-image: url({% static 'img/controll.jpg' %})"></div>
+                </a>
+                <a href="{% static 'img/controll11.jpg' %}" target="_blank">
+                    <div class="product-mini-img" style="background-image: url({% static 'img/controll11.jpg' %})"></div>
+                </a>
+                <a href="{% static 'img/controll2.jpg' %}" target="_blank">
+                    <div class="product-mini-img" style="background-image: url({% static 'img/controll2.jpg' %})"></div>
+                </a>
+            </div>
+        </article>
+        <article class="product-description">
+            <h2 class="product-name">Fishnet Chair</h2>
+            <h3 class="product-second-name">Hot Deal</h3>
+            <div class="product-price">
+                <p class="price-currency">$ </p>
+                <p class="price-num">36.7</p>
+                <p class="price-value">/sq</p>
+            </div>
+            <a href="#" class="product-button">order&nbsp;us <img class="product-button-arrow" src="{% static 'img/arrow-product.svg' %}" alt="arrow"></a>
+            <div class="product-details">
+                <p class="paragraph">The majesty of&nbsp;Mountains&nbsp;&mdash; Ugmonk style.</p>
+                <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do&nbsp;eiusmod tempor incididunt ut&nbsp;labore</p>
+                <p class="paragraph"> et&nbsp;dolore magna aliqua. Ut&nbsp;enim ad&nbsp;minim veniam, quis nostrud exercitation ullamco laboris nisi ut&nbsp;aliquip ex&nbsp;ea&nbsp;commodo consequat.</p>
+                <p class="paragraph">Duis aute irure dolor in&nbsp;reprehenderit in&nbsp;voluptate velit esse cillum dolore eu&nbsp;fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</p>
+                <!--
+    <p class="paragraph"> sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque </p>
+    <p class="paragraph">laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae </p>
+    <p class="paragraph">vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam </p>
+    <p class="paragraph">est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
 -->
-                            </div>
-                        </article>
-                    </section>
-                    <section class="related-products padding-site">
-                        <section class="related-products-menu">
-                            <p class="related-products-text">Related Products</p>
-                            <a href="#" class="explore-link">explore all <img src="/static/img/arrow.svg" alt="arrow"></a>
-                        </section>
-                        <section class="related-products-content">
-                            <article class="related-product" style="background-image: url(/static/img/product-11.jpg)">
-                                <div class="product-in-box-content">
-                                    <a class="product-in-box-link" href="#"><img class="product-in-box-link-arrow" src="/static/img/arrow.svg" alt="arrow"></a>
-                                    <h3 class="product-in-box-name">Fishnet Chair</h3>
-                                    <p class="product-in-box-details">Seat and back with upholstery made of&nbsp;cold cure foam</p>
-                                </div>
-                            </article>
-                            <article class="related-product" style="background-image: url(/static/img/product-21.jpg)">
-                                <div class="product-in-box-content">
-                                    <a class="product-in-box-link" href="#"><img class="product-in-box-link-arrow" src="/static/img/arrow.svg" alt="arrow"></a>
-                                    <h3 class="product-in-box-name">Fishnet Chair</h3>
-                                    <p class="product-in-box-details">Seat and back with upholstery made of&nbsp;cold cure foam</p>
-                                </div>
-                            </article>
-                            <article class="related-product" style="background-image: url(/static/img/product-31.jpg)">
-                                <div class="product-in-box-content">
-                                    <a class="product-in-box-link" href="#"><img class="product-in-box-link-arrow" src="/static/img/arrow.svg" alt="arrow"></a>
-                                    <h3 class="product-in-box-name">Fishnet Chair</h3>
-                                    <p class="product-in-box-details">Seat and back with upholstery made of&nbsp;cold cure foam</p>
-                                </div>
-                            </article>
-                        </section>
-                    </section>
-                </main>
-            </section>
+            </div>
+        </article>
+    </section>
+    <section class="related-products padding-site">
+        <section class="related-products-menu">
+            <p class="related-products-text">Related Products</p>
+            <a href="#" class="explore-link">explore all <img src="{% static 'img/arrow.svg' %}" alt="arrow"></a>
         </section>
-        <footer class="footer">
-            <section class="container">
-                <footer class="footer-top-bottom padding-site">
-                    <section class="footer-top">
-                        <article class="footer-top-contact-us">
-                            <h3 class="footer-top-contact-us-name">Contact Us</h3>
-                            <p class="footer-top-contact-us-links">132A Bridge Road Richmond VIC&nbsp;Australia.</p>
-                            <p class="footer-top-contact-us-links">Talk to&nbsp;us on&nbsp;1300&nbsp;132 info@interior.com</p>
-                        </article>
-                        <article class="footer-top-useful">
-                            <h3 class="footer-top-useful-name">Useful Information</h3>
-                            <div class="footer-top-useful-links">
-                                <div class="footer-top-useful-links-1">
-                                    <a class="footer-top-useful-link" href="#">Sales terms</a>
-                                    <a class="footer-top-useful-link" href="#">Customer care</a>
-                                    <a class="footer-top-useful-link" href="#">Delivery</a>
-                                </div>
-                                <div class="footer-top-useful-links-2">
-                                    <a class="footer-top-useful-link" href="#">Architect accounts</a>
-                                    <a class="footer-top-useful-link" href="#">Careers</a>
-                                    <a class="footer-top-useful-link" href="#">Exchanges &amp;&nbsp;returns</a>
-                                </div>
-                            </div>
-                        </article>
-                        <article class="footer-top-subscribe">
-                            <h3 class="footer-top-subscribe-name">Let&rsquo;s Stay in&nbsp;Touch!</h3>
-                            <p class="footer-top-subscribe-details">Suscribe to&nbsp;know about our latest news, products and special offers just for suscribers.</p>
-                            <div class="footer-top-subscribe-input-block">
-                                <input class="footer-top-subscribe-input" type="email" placeholder="your email address">
-                                <button class="footer-top-subscribe-input-button" type="submit"><img src="/static/img/send.png" alt="send"></button>
-                            </div>
-                        </article>
-                    </section>
-                    <section class="footer-bottom">
-                        <p class="footer-bottom-copyright">&copy;Copyright&nbsp;&mdash; INTERIOR 2016. All Rights Reserved.</p>
-                        <article class="footer-bottom-socials">
-                            <a class="footer-bottom-socials-link" href="#"><img src="/static/img/facebook.png" alt="facebook"></a>
-                            <a class="footer-bottom-socials-link" href="#"><img src="/static/img/twitter.png" alt="twitter"></a>
-                            <a class="footer-bottom-socials-link" href="#"><img src="/static/img/google+.png" alt="google+"></a>
-                            <a class="footer-bottom-socials-link" href="#"><img src="/static/img/pinterest.png" alt="pinterest"></a>
-                        </article>
-                        <p class="footer-bottom-terms">Terms &amp;&nbsp;Conditions&nbsp;/ Privacy policy &amp;&nbsp;Cookies</p>
-                    </section>
-                </footer>
-            </section>
-        </footer>
-    </div>
-
-</body>
-
-</html>
+        <section class="related-products-content">
+            <article class="related-product" style="background-image: url({% static 'img/product-11.jpg' %})">
+                <div class="product-in-box-content">
+                    <a class="product-in-box-link" href="#"><img class="product-in-box-link-arrow" src="{% static 'img/arrow.svg' %}" alt="arrow"></a>
+                    <h3 class="product-in-box-name">Fishnet Chair</h3>
+                    <p class="product-in-box-details">Seat and back with upholstery made of&nbsp;cold cure foam</p>
+                </div>
+            </article>
+            <article class="related-product" style="background-image: url({% static 'img/product-21.jpg' %})">
+                <div class="product-in-box-content">
+                    <a class="product-in-box-link" href="#"><img class="product-in-box-link-arrow" src="{% static 'img/arrow.svg' %}" alt="arrow"></a>
+                    <h3 class="product-in-box-name">Fishnet Chair</h3>
+                    <p class="product-in-box-details">Seat and back with upholstery made of&nbsp;cold cure foam</p>
+                </div>
+            </article>
+            <article class="related-product" style="background-image: url({% static 'img/product-31.jpg' %})">
+                <div class="product-in-box-content">
+                    <a class="product-in-box-link" href="#"><img class="product-in-box-link-arrow" src="{% static 'img/arrow.svg' %}" alt="arrow"></a>
+                    <h3 class="product-in-box-name">Fishnet Chair</h3>
+                    <p class="product-in-box-details">Seat and back with upholstery made of&nbsp;cold cure foam</p>
+                </div>
+            </article>
+        </section>
+    </section>
+</main>
+{% endblock %}
