1 Создал папку media за корнем проекта. Прописал в settings.py MEDIA_URL и MEDIA_ROOT. Добавил в urls.py код, который добавляет ссылку в urlpatterns 2 Создал модели ProductCategory и Product в models.py. Выполнил команды makemigrations и migrate в консоли. Прочекал файл дб на наличие созданных таблиц 3 В консоли добавил несколько категорий продуктов и сами продукты с помощью команд new_category = ProductCategory(name='category_name', ...), new_category.save(). Прочекал файл дб на наличие созданных категорий и продуктов 4 Создал суперпользователя командой createsuperuser. Добавил созданные модели в admin.py. Создал еще несколько продуктов и категорий через админку 5 Импортировал созданные модели в mainapp/views.py. Прописал код, который добавляет объекты моделей в контент index.html. 6 С помощью цикла {% for %} раздал созданные продукты в блок Featured New. Теперь каждый товар имеет свое имя и описание 7 Создал диспетчер URL в приложении

--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -30,34 +30,15 @@
             <a href="#" class="explore-link">explore all <img src="{% static 'img/arrow.svg' %}" alt="arrow"></a>
         </article>
         <section class="featured-product-box">
-            <article class="featured-product-in-box" style="background-image: url({% static 'img/product-1.jpg' %})">
-                <div class="product-in-box-content">
-                    <a class="product-in-box-link" href="#"><img class="product-in-box-link-arrow" src="{% static 'img/arrow.svg' %}" alt="arrow"></a>
-                    <h3 class="product-in-box-name">Fishnet Chair</h3>
-                    <p class="product-in-box-details">Seat and back with upholstery made of&nbsp;cold cure foam</p>
-                </div>
-            </article>
-            <article class="featured-product-in-box" style="background-image: url({% static 'img/product-2.jpg' %})">
-                <div class="product-in-box-content">
-                    <a class="product-in-box-link" href="#"><img class="product-in-box-link-arrow" src="{% static 'img/arrow.svg' %}" alt="arrow"></a>
-                    <h3 class="product-in-box-name">Fishnet Chair</h3>
-                    <p class="product-in-box-details">Seat and back with upholstery made of&nbsp;cold cure foam</p>
-                </div>
-            </article>
-            <article class="featured-product-in-box" style="background-image: url({% static 'img/product-3.jpg' %})">
-                <div class="product-in-box-content">
-                    <a class="product-in-box-link" href="#"><img class="product-in-box-link-arrow" src="{% static 'img/arrow.svg' %}" alt="arrow"></a>
-                    <h3 class="product-in-box-name">Fishnet Chair</h3>
-                    <p class="product-in-box-details">Seat and back with upholstery made of&nbsp;cold cure foam</p>
-                </div>
-            </article>
-            <article class="featured-product-in-box" style="background-image: url({% static 'img/product-4.jpg' %})">
-                <div class="product-in-box-content">
-                    <a class="product-in-box-link" href="#"><img class="product-in-box-link-arrow" src="{% static 'img/arrow.svg' %}" alt="arrow"></a>
-                    <h3 class="product-in-box-name">Fishnet Chair</h3>
-                    <p class="product-in-box-details">Seat and back with upholstery made of&nbsp;cold cure foam</p>
-                </div>
-            </article>
+            {% for product in products %}
+                <article class="featured-product-in-box" style="background-image: url('/media/{{ product.image }}')">
+                    <div class="product-in-box-content">
+                        <a class="product-in-box-link" href="#"><img class="product-in-box-link-arrow" src="{% static 'img/arrow.svg' %}" alt="arrow"></a>
+                        <h3 class="product-in-box-name">{{ product.name }}</h3>
+                        <p class="product-in-box-details">{{ product.short_desc }}</p>
+                    </div>
+                </article>
+            {% endfor %}
         </section>
     </section>
     <section class="promo-product">
