--- a/static/css/style.css
+++ b/static/css/style.css
@@ -282,6 +282,7 @@ body {
     display: none;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     justify-content: center;
 }
 
