--- a/mainapp/templates/mainapp/includes/inc_header.html
+++ b/mainapp/templates/mainapp/includes/inc_header.html
@@ -1,10 +1,11 @@
 {% load static %}
+
 <a class="logo" href="/"><img src="{% static 'img/logo.svg' %}" alt="logo"></a>
 <ul class="menu">
     <li><a href="{% url 'main' %}"
            class="menu-link {% if request.resolver_match.url_name == 'main' %}menu-link-active{% endif %}">HOME</a></li>
     <li><a href="{% url 'products:index' %}"
-           class="menu-link {% if request.resolver_match.url_name == 'products' %}menu-link-active{% endif %}">PRODUCTS</a></li>
+           class="menu-link {% if request.resolver_match.namespace == 'products' %}menu-link-active{% endif %}">PRODUCTS</a></li>
     <li><a href="#"
            class="menu-link {% if request.resolver_match.url_name == '#' %}menu-link-active{% endif %}">HISTORY</a></li>
     <li><a href="{% url 'product-details' %}"
@@ -12,4 +13,13 @@
     <li><a href="{% url 'contacts' %}"
            class="menu-link {% if request.resolver_match.url_name == 'contacts' %}menu-link-active{% endif %}">CONTACT</a></li>
     <li><a href="#" class="menu-link"><img src="{% static 'img/search.svg' %}" alt="search"></a></li>
+    {% if user.is_authenticated %}
+        <li><a class="menu-link" href = "{% url 'auth:edit' %}">{{ user.username|default:'User' }} (edit)</a></li>
+    {% endif %}
+    {% if user.is_authenticated %}
+        <li><a class="menu-link" href = "{% url 'auth:logout' %}">logout</a></li>
+    {% else %}
+        <li><a class="menu-link" href = "{% url 'auth:login' %}">login</a></li>
+        <li><a class="menu-link" href = "{% url 'auth:register' %}">register</a></li>
+    {% endif %}
 </ul>
