Выполнил задания к 6 уроку

--- a/basketapp/templates/basketapp/basket.html
+++ b/basketapp/templates/basketapp/basket.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <h1>Тут будет корзина</h1>
-</body>
-</html>
+{% extends 'mainapp/base.html' %}
+{% load staticfiles %}
+
+{% block container %}
+    <div class = "h2 text-center head">
+            This is your shopping cart,
+            {% if user.username|length <= 7 %}
+                {{ user.username }}
+            {% else %}
+                User
+            {% endif %}
+    </div>
+    <div class = "basket_list">
+        {% include 'basketapp/includes/inc_basket_list.html' %}
+    </div>
+
+    <a class = "btn btn-round" href = "{% url 'main' %}" >to main page</a>
+{% endblock %}
