--- a/adminapp/templates/adminapp/product_delete.html
+++ b/adminapp/templates/adminapp/product_delete.html
@@ -3,13 +3,13 @@
 
 {% block content %}
     <div class="admin-object-record admin-object-record-delete">
-        Уверены, что хотите удалить {{ productcategory.name }}?
+        Уверены, что хотите удалить {{ product.name }} ({{ product.category.name }})?
         <div class="admin-object-actions admin-object-actions-delete">
-            <form action="{% url 'admin_custom:category_delete' productcategory.pk %}" method="post">
+            <form action="{% url 'admin_custom:product_delete' product.pk %}" method="post">
                 {% csrf_token %}
                 <input class="admin-object-actions-link admin-object-actions-link-delete" type="submit" value="удалить">
             </form>
-            <a class="admin-object-actions-link admin-object-actions-link-delete" href="{% url 'admin_custom:categories' %}">Отмена</a>
+            <a class="admin-object-actions-link admin-object-actions-link-delete" href="{% url 'admin_custom:products' product.category.pk %}">Отмена</a>
         </div>
     </div>
 {% endblock %}
