--- a/adminapp/templates/adminapp/user_delete.html
+++ b/adminapp/templates/adminapp/user_delete.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-    <div class="user_delete">
+    <div class="admin-object-record admin-object-record-delete">
         Уверены, что хотите удалить {{ shopuser.username }}
         {% if shopuser.first_name %}
             ({{ shopuser.first_name|title }}
@@ -11,10 +11,12 @@
             {% endif %})
         {% endif %}
         ?
-        <form action="{% url 'admin_custom:user_delete' shopuser.pk %}" method="post">
-            {% csrf_token %}
-            <input class="btn btn-danger" type="submit" value="удалить">
-        </form>
-        <a class="btn btn-success" href="{% url 'admin_custom:users' %}">Отмена</a>
+        <div class="admin-object-actions admin-object-actions-delete">
+            <form action="{% url 'admin_custom:user_delete' shopuser.pk %}" method="post">
+                {% csrf_token %}
+                <input class="admin-object-actions-link admin-object-actions-link-delete" type="submit" value="удалить">
+            </form>
+            <a class="admin-object-actions-link admin-object-actions-link-delete" href="{% url 'admin_custom:users' %}">Отмена</a>
+        </div>
     </div>
 {% endblock %}
