--- a/adminapp/templates/adminapp/users.html
+++ b/adminapp/templates/adminapp/users.html
@@ -3,42 +3,40 @@
 
 {% block content %}
     <div class="users_list">
-        <a class="new_user" href= {% url 'admin_custom:user_create' %}>Создать нового пользователя</a>
+        <div class="admin-new-item">
+            <h4 class="admin-item-name">Пользователи</b></h4>
+            <a class="admin-new-item-button" href= {% url 'admin_custom:user_create' %}>Создать нового пользователя</a>
+        </div>
 
         {% for object in object_list %}
-            <div class="user_record {% if not object.is_active %}not_active{% endif %}">
-                <img src="/media/{{ object.avatar|default:'users_avatars/default.jpg' }}" alt="{{ object.username }}">
+            <div class="admin-object-record {% if not object.is_active %}not_active{% endif %}">
+                <img class="admin-object-img" src="/media/{{ object.avatar|default:'users_avatars/default.jpg' }}" alt="{{ object.username }}">
+                <div class="admin-text-about">
+                    <p>Username:&nbsp;{{ object.username }}</p>
+                    <p>Name:&nbsp;
+                        {% if object.first_name %}
+                            {{ object.first_name|title }}
+                            {% if object.last_name %}
+                                {{ object.last_name|title }}
+                            {% endif %}
+                            {% else %}
+                                None
+                        {% endif %}
+                    </p>
+                    <p>age:&nbsp;{{ object.age }}&nbsp;лет</p>
+                    <p>email:&nbsp;{{ object.email }}</p>
+                    <p>logged:&nbsp;{{ object.last_login }}</p>
+                </div>
                 <div class="user_role">
                     {% if object.is_superuser %}
                         администратор
                     {% else %}
                         пользователь
                     {% endif %}
-                    <a href= {% url 'admin_custom:user_update' object.pk %}>редактировать</a>
-                    <a href= {% url 'admin_custom:user_delete' object.pk %}>удалить</a>
                 </div>
-                <div class="user_name">
-                    <p><strong>{{ object.username }}</strong></p>
-                    <p>
-                        {% if object.first_name %}
-                            <b>{{ object.first_name|title }}</b>
-                            {% if object.last_name %}
-                                <p>{{ object.last_name|title }}</p>
-                            {% endif %}
-                        {% endif %}
-                    </p>
-                </div>
-                <div class="user_age">
-                    age:<br>
-                    {{ object.age }} лет
-                </div>
-                <div class="user_email">
-                    email:<br>
-                    {{ object.email }}
-                </div>
-                <div class="user_lastlogin">
-                    logged:<br>
-                    {{ object.last_login }}
+                <div class="admin-object-actions">
+                    <a class="admin-object-actions-link" href= {% url 'admin_custom:user_update' object.pk %}>редактировать</a>
+                    <a class="admin-object-actions-link" href= {% url 'admin_custom:user_delete' object.pk %}>удалить</a>
                 </div>
             </div>
         {% endfor %}
